--- a/202412.html
+++ b/202412.html
@@ -158,7 +158,7 @@
             border-radius: 6px;
             cursor: pointer;
             font-size: 16px;
-            margin: 0 10px;
+            margin: 0 10px 10px;
             transition: background-color 0.3s, transform 0.2s;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -312,9 +312,9 @@
         </div>
 
         <div class="exam-info">
-            <div>试题总数: <span id="total-titles">10</span></div>
-            <div>总分: 20分</div>
-            <div>考试时间: 60分钟</div>
+            <div>试题总数: <span id="total-titles">5</span></div>
+            <div>总分: 10分</div>
+            <div>考试时间: 10分钟</div>
         </div>
 
         <div class="student-info" style="display: block;">
@@ -613,6 +613,25 @@
             document.body.appendChild(downloadLink);
             downloadLink.click();
             document.body.removeChild(downloadLink);
+        }
+
+        // 模拟发送到服务器的函数
+        function sendToServer(data) {
+            // 在实际应用中，这里应该使用fetch或XMLHttpRequest将数据发送到服务器
+            fetch('/api/submit-exam', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: data
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log('提交成功:', data);
+                })
+                .catch((error) => {
+                    console.error('提交错误:', error);
+                });
         }
     </script>
 </body>
